Bug 1644600 - Move JSStructuredCloneData destructor into private impl r=sfink

This is using js::SharedArrayRawBufferRefs that is a private API and not
exported. Leaving it in the header makes linking not to work when using
StructuredClone:

  JSStructuredCloneData::~JSStructuredCloneData()':
    /usr/include/mozjs-78/js/StructuredClone.h:459:
    undefined reference to
    `js::SharedArrayRawBufferRefs::~SharedArrayRawBufferRefs()

Differential Revision: https://phabricator.services.mozilla.com/D114128